--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
-        <
+        <meta charset="utf-8">
+        <link rel="stylesheet" href="style.css">
+        <title>Weather</title>
+        <script src="src/index.js" type="module" charset="utf-8"></script>
     </head>
+    <body>
+        <h1>The Weather For The Week</h1>
 
 
 
