got a list but no info added to the list

--- a/index.html
+++ b/index.html
@@ -8,7 +8,19 @@
     </head>
     <body>
         <h1>The Weather For The Week</h1>
-
+        <div id="search-forms">
+            <form id="day-form">
+                Day <input type="text" name="day" id="day">
+                Condition <input type="text" name="condition" id="condition">
+                High Temp <input type="text" name="high-temp" id="high-temp">
+                Low Temp <input type="text" name="low-temp" id="low-temp">
+            <input type="submit" value="Search">
+            </form>
+        </div>
+        <div class="list">
+            <ul id="daily-weather">
+            </ul>
+        </div>
 
 
 
