--- a/index.html
+++ b/index.html
@@ -3,24 +3,12 @@
     <head>
         <meta charset="utf-8">
         <link rel="stylesheet" href="style.css">
-        <title>Weather</title>
+        <title>The Bookstore</title>
         <script src="src/index.js" type="module" charset="utf-8"></script>
     </head>
     <body>
-        <h1>The Weather For The Week</h1>
-        <div id="search-forms">
-            <form id="day-form">
-                Day <input type="text" name="day" id="day">
-                Condition <input type="text" name="condition" id="condition">
-                High Temp <input type="text" name="high-temp" id="high-temp">
-                Low Temp <input type="text" name="low-temp" id="low-temp">
-            <input type="submit" value="Search">
-            </form>
-        </div>
-        <div class="list">
-            <ul id="daily-weather">
-            </ul>
-        </div>
+        <h1>Rowen's Bookstore</h1>
+        
 
 
 
