--- a/index.html
+++ b/index.html
@@ -2,37 +2,27 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+
         <link rel="stylesheet" href="style.css">
+
+        <script src="src/data.js"></script>
+
+        <script defer src="src/index.js"></script>
+
         <title>The Bookstore</title>
-        <script src="src/index.js" type="module" charset="utf-8"></script>
     </head>
     <body>
-        <h1>Rowen's Bookstore</h1>
-        
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+        <div id="header">
+            <h1>Rowen's Manga Section</h1>
+        </div>
+        <main>
+            <div class="list">
+                <ul id="manga-list">
+                    
+                </ul>
+            </div>
+        </main>
+    </body>
 </html>
